bk_ida/gccida/g2/expand_abs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_abs/src/optabs.c:2810:18: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_abs( machine_mode mode, rtx op0, rtx target, int result_unsignedp, int safe) 
                 ^
                 enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_abs/src/optabs.c:2820:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_abs/src/optabs.c:2825:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v22; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_abs/src/optabs.c:2855:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v22 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_abs/src/obj/optabs.o] Error 1
